Tests for bug 566846: [15] record with just an identifier not giving error
Change-Id: I4318706ff8bf22d0d917874344a665e0003263b7